# onnxruntime-ep-iree

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: ci-macos.yml  ci-windows.yml  ci.yml  pre-commit.yaml
docs/: CodingStyle.md
examples/: resnet50.ipynb
models/llama/: README.md  run.py
python/: .gitignore  setup.py
python/iree_onnx_ep/: __init__.py
python/onnxruntime_ep_iree/: __init__.py
src/: dim_spec.cc  dim_spec.h  iree_allocator.cc  iree_allocator.h  iree_compile.cc  iree_compile.h  iree_data_transfer.cc  iree_data_transfer.h  iree_ep.cc  iree_ep.h  iree_ep_factory.cc  iree_ep_factory.h  iree_ort_utils.cc  iree_ort_utils.h  iree_wrappers.h  mlir_gen.cc  mlir_gen.h  ort_import.h  platform_utils.h  plugin_entry.cc  support.h  symbols.def  temp_file.cc  temp_file.h
test/: build_kernels.sh  conftest.py  kernel.cu  test_compiler_discovery.py  test_dim_specs.py  test_ep_context.py  test_ep_load.py  test_extern_dispatch.py  test_extern_dispatch_e2e.py  test_initializers.py  test_io_binding.py  test_sanitize_names.py  test_save_intermediates.py  test_tensor_attr.py  test_threaded_inference.py  test_utils.py  test_zero_element.py
